# person-search

./: .gitignore  README.md  codecov.yaml  pnpm-workspace.yaml
bor-solr-importer/: .dockerignore  .env.sample  Dockerfile  MANIFEST.in  Makefile  README.md  data_import_handler.py  pyproject.toml  requirements.txt  run.sh  setup.cfg  setup.py
bor-solr-importer/devops/: vaults.json  vaults.ocp.env
bor-solr-importer/requirements/: bcregistry-libraries.txt  prod.txt
bor-solr-importer/src/bor_solr_importer/: __init__.py  config.py  logging.py  oracle.py  version.py
bor-solr-importer/src/bor_solr_importer/bor_api/: __init__.py
bor-solr-importer/src/bor_solr_importer/bor_api/enums/: __init__.py
bor-solr-importer/src/bor_solr_importer/bor_api/exceptions/: __init__.py
bor-solr-importer/src/bor_solr_importer/bor_api/services/: __init__.py  authz.py
bor-solr-importer/src/bor_solr_importer/bor_api/services/base_solr/: __init__.py
bor-solr-importer/src/bor_solr_importer/bor_api/services/bor_solr/: __init__.py  bor_solr.py
bor-solr-importer/src/bor_solr_importer/bor_api/services/bor_solr/doc_models/: __init__.py  address.py  (+1 more)
bor-solr-importer/src/bor_solr_importer/bor_api/utils/data_converters/: __init__.py  address.py  party.py
bor-solr-importer/src/bor_solr_importer/enums/: __init__.py  colin_party_type_code.py
bor-solr-importer/src/bor_solr_importer/services/: btr_db.py  lear_db.py
bor-solr-importer/src/bor_solr_importer/utils/: __init__.py  data_collection.py  data_parsing.py  reindex.py  update_solr.py
bor-solr-importer/tests/unit/: conftest.py
(+124 files in other folders)
