[tool.poetry]
name = "bor-solr-importer"
version = "1.0.1a1"
description = ""
authors = ["Kial Jinnah"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "bor_solr_importer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11.2"
Flask = "2.3.2"
cx-Oracle = "8.3.0"
psycopg2-binary = "2.9.6"
python-dotenv = "^1.0.0"
requests = "^2.28.2"
sentry-sdk = {extras = ["flask"], version = "^1.17.0"}
bor-api = {path = "../bor-api"}
phonenumbers = "^8.13.38"
flask-caching = "2.0.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
flake8 = "^6.0.0"
flake8-blind-except = "^0.2.1"
flake8-debugger = "^4.1.2"
flake8-docstrings = "^1.7.0"
flake8-isort = "<6"
flake8-quotes = "^3.3.2"
pep8-naming = "^0.13.3"
pydocstyle = "<4"
pylint = "^2.17.7"
pylint-flask = "^0.6"
isort = "<5"
pytest-cov = "^4.0.0"
lovely-pytest-docker = "^0.3.1"
pytest-docker = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
